logs/dag_id=weekly_wrapped_dag/run_id=manual__2022-12-14T12:48:13.545845+00:00/task_id=create_wrapped_table/attempt=1.log
[2022-12-14T12:48:17.387+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: weekly_wrapped_dag.create_wrapped_table manual__2022-12-14T12:48:13.545845+00:00 [queued]>
[2022-12-14T12:48:17.417+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: weekly_wrapped_dag.create_wrapped_table manual__2022-12-14T12:48:13.545845+00:00 [queued]>
[2022-12-14T12:48:17.418+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2022-12-14T12:48:17.419+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 1
[2022-12-14T12:48:17.419+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2022-12-14T12:48:17.439+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): create_wrapped_table> on 2022-12-14 12:48:13.545845+00:00
[2022-12-14T12:48:17.449+0000] {standard_task_runner.py:55} INFO - Started process 29243 to run task
[2022-12-14T12:48:17.453+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weekly_wrapped_dag', 'create_wrapped_table', 'manual__2022-12-14T12:48:13.545845+00:00', '--job-id', '107', '--raw', '--subdir', 'DAGS_FOLDER/weekly_dag.py', '--cfg-path', '/tmp/tmpacpe9pk3']
[2022-12-14T12:48:17.454+0000] {standard_task_runner.py:83} INFO - Job 107: Subtask create_wrapped_table
[2022-12-14T12:48:17.543+0000] {task_command.py:389} INFO - Running <TaskInstance: weekly_wrapped_dag.create_wrapped_table manual__2022-12-14T12:48:13.545845+00:00 [running]> on host b92abc15fbab
[2022-12-14T12:48:17.653+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weekly_wrapped_dag
AIRFLOW_CTX_TASK_ID=create_wrapped_table
AIRFLOW_CTX_EXECUTION_DATE=2022-12-14T12:48:13.545845+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-14T12:48:13.545845+00:00
[2022-12-14T12:48:17.660+0000] {sql.py:253} INFO - Executing: CREATE TABLE IF NOT EXISTS weekly_wrapped (
    user_id INTEGER REFERENCES users (id),
    wrapped JSON,
    time_added DATE CURRENT_DATE
);
[2022-12-14T12:48:17.677+0000] {base.py:73} INFO - Using connection ID 'spotify_etl' for task execution.
[2022-12-14T12:48:17.945+0000] {base.py:73} INFO - Using connection ID 'spotify_etl' for task execution.
[2022-12-14T12:48:17.953+0000] {sql.py:364} INFO - Running statement: CREATE TABLE IF NOT EXISTS weekly_wrapped (
    user_id INTEGER REFERENCES users (id),
    wrapped JSON,
    time_added DATE CURRENT_DATE
);, parameters: None
[2022-12-14T12:48:17.965+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CURRENT_DATE"
LINE 4:     time_added DATE CURRENT_DATE
                            ^

[2022-12-14T12:48:17.987+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=weekly_wrapped_dag, task_id=create_wrapped_table, execution_date=20221214T124813, start_date=20221214T124817, end_date=20221214T124817
[2022-12-14T12:48:18.000+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 107 for task create_wrapped_table (syntax error at or near "CURRENT_DATE"
LINE 4:     time_added DATE CURRENT_DATE
                            ^
; 29243)
[2022-12-14T12:48:18.036+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-12-14T12:48:18.065+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
